Ensure whitespace for Authorization Bearer HTTP response, refactor, clean code